# todo-list

./: CMakeLists.txt  DOC.md  README.md  todoitem.cpp
src/: main.cpp  mainwindow.cpp  mainwindow.h  todoitem.h
src/controller/: mainwindow.cpp  mainwindow.h
src/model/: taskitem.cpp  taskitem.h  todoitem.cpp  todoitem.h
src/repo/: databasemanager.cpp  databasemanager.h
src/repository/: databasemanager.h
src/widget/: mainwindow.cpp  mainwindow.h  mainwindow.ui  taskcreatedialog.cpp  taskcreatedialog.h  taskcreatedialog.ui  taskdetaildialog.cpp  taskdetaildialog.h  taskdetaildialog.ui  todocreatedialog.cpp  todocreatedialog.ui  tododetaildialog.cpp  tododetaildialog.h  tododetaildialog.ui  tododialog.cpp  tododialog.h  tododialog.ui
